# qtazu

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
qtazu/: utils.py
qtazu/models/: persons.py
qtazu/res/icon/: camera.png~
qtazu/widgets/: comment.py  login.py  screenmarquee.py  taskbreadcrumb.py  thumbnail.py
