[metadata]
name = Qtazu
description = Python Qt widgets for CG-Wire using gazu 
long_description = file: README.md
version = attr: qtazu.__version__.__version__
keywords = cg, production, asset manager, asset, shot, tasks, tracking
license = MIT
license_file = LICENSE
author = CG Wire
author_email = roy_nieterau@hotmail.com
url = https://github.com/Colorbleed/qtazu
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Desktop 
    Framework :: Qt
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    qt.py==1.2.3
    gazu==0.7.1

[options.packages.find]
# ignore gazutest directory
include = qtazu*

[options.extras_require]
dev =
    wheel

test =
    pytest
    pytest-cov
    requests_mock
